fix scream button cursor

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             font-weight: 900;
             font-size: 1.2rem;
             border: none;
+            cursor: pointer;
         }
 
         #send:hover {
